# g1-mujoco-ros2-nav-sim-G1-MuJoCo-ROS2-

./: .gitignore  1.txt  README.md  README_zh.md
src/FAST_LIO_ROS2/config/: mid360.yaml  mid360_real.yaml
src/FAST_LIO_ROS2/src/: laserMapping.cpp
src/maps/: g1_navigation_room.pgm  g1_navigation_room.yaml  new_2d_map.pgm  new_2d_map.yaml  vln_fastlio_2d.pgm  vln_fastlio_2d.yaml  vln_fastlio_2d_stats.json  vln_fastlio_map.pcd  vln_navigation_room.pgm  vln_navigation_room.yaml
src/mujuco_sim/: map.rviz  package.xml  setup.cfg  setup.py
src/mujuco_sim/behavior_trees/: navigate_to_pose_foxy.xml
src/mujuco_sim/config/: cyclonedds_lo.xml  g1_nav2_params.yaml  g1_slam_toolbox.yaml
src/mujuco_sim/launch/: g1_nav_sim.launch.py  map.launch.py  nav.launch.py
src/mujuco_sim/mujuco_sim/: __init__.py  fastlio_tf_bridge.py  unitree_mujoco_shm_bridge.py
src/mujuco_sim/resource/: mujuco_sim
src/unitree_mujoco/example/: COLCON_IGNORE
src/unitree_mujoco/simulate/: CMakeLists.txt  config.yaml
src/unitree_mujoco/simulate/src/: main.cc  shm_nav_bridge.cc  shm_nav_bridge.h
src/unitree_mujoco/unitree_robots/g1/: g1_29dof.xml  navigation_room_29dof.xml  vln_apartment_29dof.xml
src/unitree_rl_mjlab/deploy/include/: param.h
src/unitree_rl_mjlab/deploy/include/FSM/: CtrlFSM.h  FSMState.h
src/unitree_rl_mjlab/deploy/include/input/: velocity_command_source.h
src/unitree_rl_mjlab/deploy/include/isaaclab/envs/mdp/observations/: observations.h
src/unitree_rl_mjlab/deploy/robots/g1/: CMakeLists.txt  main.cpp
src/unitree_rl_mjlab/deploy/robots/g1/config/policy/velocity/v0/exported/: policy.onnx
src/unitree_rl_mjlab/deploy/robots/g1/include/: Types.h
src/unitree_rl_mjlab/scripts/: compare.py  export_policy.py  play.py
